<resources>
    <string name="app_name">Remind Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_add">Notes Add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="permission_denied_explanation">
    You need to grant location permission in order to use location reminder.</string>
    <string name="notes_image">Notes Image</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="reminders">Reminders</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="back_button">back button</string>
    <string name="add_background_color">Add background color</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_image">Add Image</string>
    <string name="share_note">share note</string>
    <string name="delete_note">Delete note</string>
    <string name="pin_note">pin note</string>
    <string name="close_bottom_sheet_button">close bottom sheet button</string>
    <string name="reminder_image">reminder image</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="go_to_app">go to app</string>
    <string name="setting">Settings</string>
    <string name="color_select">color select</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_color">Select Color</string>
    <string name="select_color_icon">select color icon</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="time_reminder_icon">time reminder icon</string>
    <string name="location_reminder_icon">location reminder icon</string>
    <string name="save_location">Save Location</string>
    <string name="save_location_icon">save location icon</string>
    <string name="location_name">Location Name</string>
    <string name="save">Save</string>
    <string name="delete_image_icon">delete image icon</string>
    <string name="done">Done</string>
    <string name="open_map">Open Map</string>
    <string name="open_image_icon">open image icon</string>
    <string name="radius_select_icon">radius select icon</string>
    <string name="select_radius">Select Radius</string>
    <string name="drop_down_button">drop down button</string>
    <string name="select_location">Select Location</string>
    <string name="add_location_icon">add location icon</string>
    <string name="search_note_icon">search note icon</string>
    <string name="development_details_icon">development details icon</string>
    <string name="development_details">Development Details</string>
    <string name="share_app_icon">share app icon</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="change_limits_of_radius_icon">change limits of radius icon</string>
    <string name="change_limits_of_radius">Change Limits Of Radius</string>
    <string name="right_arrow">right arrow</string>
    <string name="ringtone">Ringtone</string>
    <string name="default_ringtone">Default</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="select_date">Select Date</string>
    <string name="select_date_icon">select date icon</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="hours">Hours</string>
    <string name="repeat">Repeat</string>
    <string name="select_time">Select Time</string>
    <string name="select_time_icon">select time icon</string>
    <string name="pinned_icon">pinned icon</string>
    <string name="daily">Daily</string>
    <string name="clear_text">clear text</string>
    <string name="search_location">Search Location</string>
    <string name="add_your_first_note">Add your first note</string>
    <string name="add_location">Add Location</string>
    <string name="feedback">Feedback</string>
    <string name="open_source_licenses">Open Source Licenses</string>

</resources>