<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/reminder_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purple_light"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dimen_20">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="8dp" />

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="@dimen/dimen_28"
                android:layout_height="@dimen/dimen_28"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/close_bottom_sheet_button"
                android:src="@drawable/ic_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/topGuideline" />

            <LinearLayout
                android:id="@+id/set_reminder_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/close_btn">


                <ImageView
                    android:id="@+id/reminder_image"
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="@dimen/dimen_24"
                    android:layout_marginEnd="@dimen/dimen_12"
                    android:contentDescription="@string/reminder_image"
                    android:src="@drawable/ic_add_reminder" />

                <TextView
                    android:id="@+id/set_reminder_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata_regular"
                    android:text="@string/set_reminder"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/dimen_text_16"
                    app:layout_constraintTop_toBottomOf="@id/close_btn" />
            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/time_reminder_card"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_8"
                app:layout_constraintEnd_toStartOf="@id/location_reminder_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_reminder_ll"
                app:strokeColor="@color/purple_200"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/time_image"
                        android:layout_width="@dimen/dimen_28"
                        android:layout_height="@dimen/dimen_28"
                        android:src="@drawable/ic_clock"
                        app:layout_constraintBottom_toTopOf="@id/time_reminder_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/time_reminder_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/time_reminder_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata_regular"
                        android:text="@string/time"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/dimen_text_16"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time_image" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/location_reminder_card"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/dimen_16"
                app:cardCornerRadius="@dimen/dimen_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/time_reminder_card"
                app:layout_constraintTop_toBottomOf="@id/set_reminder_ll"
                app:strokeColor="@color/purple_200"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/location_image"
                        android:layout_width="@dimen/dimen_28"
                        android:layout_height="@dimen/dimen_28"
                        android:src="@drawable/ic_add_location"
                        app:layout_constraintBottom_toTopOf="@id/location_reminder_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/location_reminder_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/location_reminder_text"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata_regular"
                        android:text="@string/location"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/dimen_text_16"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/location_image" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>