<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/reminder_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminders"
            android:textSize="@dimen/dimen_text_20"
            android:fontFamily="@font/alata_regular"
            android:textColor="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/topGuideline"/>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40"
            android:orientation="horizontal"
            android:background="@drawable/rb_background"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintTop_toBottomOf="@id/reminder_heading"
            android:layout_marginTop="@dimen/dimen_12">

            <RadioButton
                android:id="@+id/rb_time"
                style="@style/RadioButton"
                android:button="@null"
                android:checked="true"
                android:text="@string/time" />

            <RadioButton
                android:id="@+id/rb_location"
                style="@style/RadioButton"
                android:button="@null"
                android:checked="false"
                android:text="@string/location" />



        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>