<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.025" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottomGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/settings_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata_regular"
                android:text="@string/setting"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/dimen_text_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/topGuideline" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/do_not_disturb"
                android:layout_width="0dp"
                android:background="?selectableItemBackground"
                android:layout_height="@dimen/dimen_50"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/settings_heading">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata_regular"
                    android:text="@string/do_not_disturb"
                    android:textColor="@color/description_color"
                    android:textSize="@dimen/dimen_text_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="1dp"
                    android:alpha="0.6"
                    android:background="@color/description_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/do_not_disturb_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ringtone"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_50"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/do_not_disturb">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata_regular"
                    android:text="@string/ringtone"
                    android:textColor="@color/description_color"
                    android:textSize="@dimen/dimen_text_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="1dp"
                    android:alpha="0.6"
                    android:background="@color/description_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/ringtone_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_4"
                    android:text="@string/default_ringtone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ringtone_arrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ringtone_arrow"
                    android:layout_width="@dimen/dimen_16"
                    android:layout_height="@dimen/dimen_16"
                    android:contentDescription="@string/right_arrow"
                    android:src="@drawable/ic_right_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/description_color" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/radius_limit"
                android:layout_width="0dp"

                android:layout_height="@dimen/dimen_50"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/ringtone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata_regular"
                    android:text="@string/change_limits_of_radius"
                    android:textColor="@color/description_color"
                    android:textSize="@dimen/dimen_text_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="1dp"
                    android:alpha="0.6"
                    android:background="@color/description_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/radius_image"
                    android:layout_width="@dimen/dimen_28"
                    android:layout_height="@dimen/dimen_28"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:contentDescription="@string/change_limits_of_radius_icon"
                    android:src="@drawable/ic_radius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/description_color" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_50"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/radius_limit">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata_regular"
                    android:text="@string/share_with_friends"
                    android:textColor="@color/description_color"
                    android:textSize="@dimen/dimen_text_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="1dp"
                    android:alpha="0.6"
                    android:background="@color/description_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/share_image"
                    android:layout_width="@dimen/dimen_28"
                    android:layout_height="@dimen/dimen_28"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:contentDescription="@string/share_app_icon"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/description_color" />


            </androidx.constraintlayout.widget.ConstraintLayout>




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/feedback"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_50"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/share">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata_regular"
                    android:text="@string/feedback"
                    android:textColor="@color/description_color"
                    android:textSize="@dimen/dimen_text_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="1dp"
                    android:alpha="0.6"
                    android:background="@color/description_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/feedback_image"
                    android:layout_width="@dimen/dimen_32"
                    android:layout_height="@dimen/dimen_32"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:contentDescription="@string/change_limits_of_radius_icon"
                    android:src="@drawable/ic_feedback"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/description_color" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/development_details"
                android:layout_width="0dp"
                android:background="?selectableItemBackground"
                android:layout_height="@dimen/dimen_50"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/feedback">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata_regular"
                    android:text="@string/open_source_licenses"
                    android:textColor="@color/description_color"
                    android:textSize="@dimen/dimen_text_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="1dp"
                    android:alpha="0.6"
                    android:background="@color/description_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/About_image"
                    android:layout_width="@dimen/dimen_28"
                    android:layout_height="@dimen/dimen_28"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:contentDescription="@string/development_details_icon"
                    android:src="@drawable/ic_about"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/description_color" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>