<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_note_card"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_margin="@dimen/dimen_12"
            app:cardBackgroundColor="@color/purple_light"
            app:cardCornerRadius="@dimen/dimen_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="@dimen/dimen_20"
                    android:layout_height="@dimen/dimen_20"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_back_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple_200" />

                <EditText
                    android:id="@+id/search_note"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:background="@null"
                    android:focusable="true"
                    android:maxLines="1"
                    android:fontFamily="@font/alata_regular"
                    android:hint="@string/search_your_notes"
                    android:textColor="@color/purple_200"
                    android:textColorHint="#B31E40AF"
                    android:textSize="@dimen/dimen_text_20"
                    android:layout_marginEnd="@dimen/dimen_4"
                    app:layout_constraintEnd_toStartOf="@id/clear_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/back_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/clear_btn"
                    android:layout_width="@dimen/dimen_28"
                    android:layout_height="@dimen/dimen_28"
                    android:layout_marginEnd="@dimen/dimen_10"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/clear_text"
                    android:scaleType="fitXY"
                    android:visibility="gone"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/purple_200" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_note_card"
            tools:listitem="@layout/search_note_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>